# py-gcmi

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  plan.md
examples/: minimal.py
gcmi/: __init__.py
gcmi/core/: api.py
gcmi/drivers/: __init__.py  minimal.py
gcmi/hooks/: __init__.py  budgets.py  timing.py
gcmi/middleware/: __init__.py  core.py  requirements.py
gcmi/ops/: __init__.py  grid.py
gcmi/utils/: requirements.py  struct.py
tests/: conftest.py
tests/core/: test_baselines.py
tests/examples/: test_minimal.py
tests/middleware/: test_requirements_mw.py
tests/utils/: test_requirements.py  test_struct.py
