[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-gcmi"
version = "0.1.0"
description = "The Python general circulation model interface"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "isort>=5.12.0"
]

[tool.setuptools.packages.find]
include = ["gcmi*", "pygcmi*"]
exclude = ["ideas*", "projects*", "docs*", "tests*"]
